2007-12-31  Sam Steingold  <sds@gnu.org>

	* pathname.d (push, PUSH_ON_STACK): add inline & macro wrapper
	(copy_pathname_and_add_subdir, directory_search_scandir)
	(directory_search): use it

2007-12-30  Sam Steingold  <sds@gnu.org>

	avoid goto and return from inside with_string_0
	* pathname.d (delete_file_if_exists_obj, realpath_obj, stat_obj)
	(open_output_file_obj, create_backup_file_obj): add
	(assure_dir_exists): use realpath_obj()
	(directory_exists, directory_search_hash): use stat_obj()
	(DELETE-FILE): use delete_file_if_exists_obj()
	(open_file): use open_output_file_obj() & create_backup_file_obj()

2007-12-30  Sam Steingold  <sds@gnu.org>

	fix bug [ 1860489 ]: deletion of symlinks into non-existent dirs fails
	* pathname.d (DELETE-FILE): when the directory does not exist,
	still remove the link, just skip check_delete_open()

2007-12-30  Sam Steingold  <sds@gnu.org>

	additional 5% speedup in simple sequence tests: switch instead of if
	* lispbibl.d (fastcmp_t): new type
	(subr_t): split uintW seclass into uintB seclass and uintB fastcmp
	* funarg.d (check_test_args): use fastcmp subr field in switch
	instead of a sequence of if statements
	* subr.d (SECFC_BITS, SECFC_MASK, SECFC, SECFC_SEC, SECFC_FC):
	macros to allow passing both seclass and fastcmp in one LISPFUN
	macro argument
	(LISPFUN_D, LISPFUN_F, LISPFUN_G): set fastcmp
	(eq, eql, equal, equalp): set fastcmp
	* predtype.d (eq, eql, equal, equalp): ditto

2007-12-27  Sam Steingold  <sds@gnu.org>

	* funarg.d: new file, extracted from list.d, sequence.d, weak.d
	* list.d, sequence.d, weak.d: use funarg.d
	replace up_function_t and up2_function_t with funarg_t
	extend the 2001-06-16 patch (do not go through FUNCALL for simple tests)
	by selecting the test function once, not testing on each comparison
	* makemake.in (CPARTS): add funarg
	* lispbibl.d (check_key_arg, funcall_key, check_test_args): add
	(error_both_tests): remove

2007-12-26  Sam Steingold  <sds@gnu.org>
