@@ -3,6 +3,7 @@
 	* pathname.d (push, PUSH_ON_STACK): add inline & macro wrapper
 	(copy_pathname_and_add_subdir, directory_search_scandir)
 	(directory_search): use it
+	(pathname_add_subdir): do not pass arguments on the STACK
 
 2007-12-30  Sam Steingold  <sds@gnu.org>
 
